proc-macro-error/test-crate/tests/ui/abort.stderr
error: abort! 3+ args test

  = help: help message test

 --> $DIR/abort.rs:4:10
  |
4 | make_fn!(abort);
  |          ^^^^^
