proc-macro-error/test-crate/tests/ui/abort.rs
extern crate test_crate;
use test_crate::make_fn;

make_fn!(abort);

fn main() {}
